# acc_dual_mom

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  discover.parquet  pea_universe.yaml  prices.parquet  pyproject.toml  strategies.yaml
docs/: METHODOLOGY.md
history/: banks_adm_m_t3.parquet  core_adm_m_t1.parquet  core_adm_m_t3.parquet  core_adm_w_t3.parquet  core_dm12_m_t1.parquet  core_dm12_m_t3.parquet  core_dm6_m_t1.parquet  core_dm6_m_t3.parquet  core_sp_m_t3.parquet  em_asia_bh.parquet  gem_adm_m_t1.parquet  geo3_dm6_q_t1.parquet  geo4safe_dm12_m_t3.parquet  jp_adm_m_t1.parquet  pair_dm6_m_t1.parquet  pair_dm6_sp_q_t2.parquet  regional_dm12_sp_q_t3.parquet  regional_dm18_sp_m_t3.parquet  regional_dm6_sp_m_t3.parquet  regional_dm6_sp_q_t3.parquet  regional_dm6_sp_s_t3.parquet  regional_dm6_st_m_t3.parquet  regional_dm6_st_q_t3.parquet  regional_dm6_st_s_t3.parquet  topix_bh.parquet  tri_adm136_m_t1.parquet  tri_adm248_m_t1.parquet  trisafe_adm136_m_t1.parquet  trisafe_adm248_m_t1.parquet  us_adm_m_t1.parquet  wld3_noeu_uh_bh.parquet  wld4_nohdg_bh.parquet  world3_bh.parquet  world3_em_bh.parquet  world3_jp_m_t3.parquet  world4_dm6_s_t1.parquet  world4safe_dm6_s_t1.parquet  world_60_40_bh.parquet  world_bh.parquet  world_jp_m_t1.parquet
pea_momentum/: __init__.py  allocate.py  backtest.py  cli.py  correlations.py  diagnostics.py  discover.py  errors.py  fetch.py  metrics.py  render.py  schedule.py  score.py  stitching.py  store.py  universe.py
results/: banks_adm_m_t3.rebalances.json  core_adm_m_t1.rebalances.json  core_adm_m_t3.rebalances.json  (+37 more)
(+76 files in other folders)
